--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "noty": "^3.2.0-beta",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-redux": "^7.2.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
